Added Story screen + changed view of MapsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="mystery_at_maynooth">Mystery at Maynooth</string>
     <string name="play">Play</string>
+    <string name="what_happened">What happened...</string>
 </resources>
