added database function to scorecard + maps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="mystery_at_maynooth">Mystery at Maynooth</string>
     <string name="play">Play</string>
     <string name="what_happened">What happened...</string>
+    <string name="goBack">Go back</string>
 </resources>
